// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletedListItemContainer should render rtl text correctly 1`] = `
.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c1 {
  position: relative;
}

.c0 {
  display: inline-block;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<li
  role="listitem"
>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
      dir="ltr"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <p
          class="c4"
        >
          It is unordered
        </p>
      </div>
    </div>
  </div>
</li>
`;

exports[`BulletedListItemContainer should render text correctly 1`] = `
.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c1 {
  grid-column: 1 / span 6;
}

.c0 {
  display: inline-block;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<li
  role="listitem"
>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Here is a list
      </p>
    </div>
  </div>
</li>
`;
